@@ -1,7 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.607 2006/03/01 02:27:51 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.608 2006/03/02 21:37:58 agaffney Exp $
+
+  2 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/x86ArchitectureTemplate.py:
+  proper return code checking for ext2/3 resizing
 
   28 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIClientController.py:
